--- a/templates/slideshowA.html
+++ b/templates/slideshowA.html
@@ -14,6 +14,8 @@
         </style>
 	</head>
 	<body>
-		<img src="himym.jpg"/>
+        <div class="main-wrapper">
+            <img src="/images/himym.jpg"/>
+        </div>
 	</body>
 </html>
